# lean.hx

./: .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  index.html  index.mjs  infoview.scm  keymap.scm  main.scm  misc.scm  tsconfig.json  unicode.scm
.githooks/: pre-commit
.helix/: languages.toml
nix/: flake.nix
nix/pkgs/development/node-packages/: node-packages.json  node-packages.nix
src/: lib.rs
