[package]
name = "lean-hx"
version = "0.1.0"
edition = "2024"

[lib]
name = "lean_hx"
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
axum = "0.8.8"
futures-util = "0.3.31"
include_dir = "0.7.4"
lsp-types = "0.97.0"
mime_guess = "2.0.5"
open = "5.3.3"
serde = "1.0.228"
serde_json = "1.0.146"
steel-core = { git = "https://github.com/mtoohey31/steel", branch = "json-fixes", features = ["dylibs", "sync", "triomphe", "imbl"] }
tokio-tungstenite = "0.28.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
